# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import messagesRouter from "./messages";
+import presenceRouter from "./presence";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(messagesRouter);
+router.use(presenceRouter);
 
 export default router;
